syntax = "proto3";
package ecommerce;

option go_package = "proto/pb";

service ProductInfo {
    rpc AddProduct(Product) returns (ProductID);
    rpc GetProduct(ProductID) returns (Product);
}

message Product {
    string id = 1;
    string name = 2;
    string description = 3;
    float price = 4;
}

message ProductID{
    string value = 1;
}